Fix issue with overflowing item names with descriptions
Some long item entries would overflow with their descriptions
if they went above 25%. Adding flex: 1 to the description to
cause the elemnt to take up the remaining space of the
two elements, and add a right margin to the item so that they
don't look like this:
chromium/src/foo/bar/bazThis is the description

--- a/gitiles-servlet/src/main/resources/com/google/gitiles/static/base.css
+++ b/gitiles-servlet/src/main/resources/com/google/gitiles/static/base.css
@@ -234,6 +234,7 @@ ul, ol {
   display: inline-block;
 }
 .RepoList-itemName {
+  margin-right: 10px;
   min-width: 25%;
   text-decoration: underline;
 }
@@ -242,6 +243,9 @@ ul, ol {
 }
 .RepoList-itemDescription {
   color: #000;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   overflow: hidden;
   text-overflow: ellipsis;
 }
